<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="loading_description">Loading</string>
    <string name="error_ok">Ok</string>
</resources>