...

    val displayState: Flow<S> by lazy { _displayState }

    abstract fun setLoading()

    abstract fun setError(
        title: String? = null,
        error: String,
        onDismissed: (() -> Unit)? = null,
    )
}

internal class DisplayDataStateHandler<T : Any>(
    backgroundContext: CoroutineContext,
...
